main.css
body main{
    font-family: 'Poppins', sans-serif;
    margin: 0px;
    padding: 0px;
    height: 100%;
    width: 100%;
    background: #ffffff;
}

.container{
    margin-bottom:40px ;
}

/* Button section */

.signIn{
    background: #21B573;
    width: 104px;
    height: 43px;
    font-weight:normal;
    color: white;
    border-radius: 33px;
    border: transparent;   
}

.allButton{
    background:none;
    width: 104px;
    height: 43px;
    font-weight:normal;
    border: none;
    outline: none; 
    text-align: left;  
    
}

.deck-btn{
    background: #21B573;
    width: 137px;
    height: 35px;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 19px;
    align-self: center;
    color: #FFFFFF;
    border-radius: 33px;
    border: transparent; 
}

.deck-btn:hover, .GetStarted:hover, .allButton:hover, .signIn:hover{
    cursor: pointer;
    transform: scale(1.1);
}

.GetStarted{
    background: #21B573;
    width: 153px;
    height: 43px;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 19px;
    color: #ffffff;
    text-align: center;
    border-radius: 33px;
    border: transparent;
}

/* Section One */

header{
    background: #F0FFF0;
}

.sectionOne{
    margin-top: 40px;
    padding: 20px;

}

.sectionOne-box{
    margin: 2%;
    padding: 1%;
}

.writing1{
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;
    color: #FD511A;
}

.writing2{
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    color: #000000;

}

.writing2sub{
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    color: #21B573;

}

.writing3{
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 36px;
    color: #6C6B6B;
}

.imageSection>img{
    width: 100%;
    height: 100%;
}




/* Section 2*/

.topic{
    font-style: normal;
    font-weight: 500;
    font-size: 140%;
    line-height: 36px;
    color: #413960;
    text-align: justify;
}

.learn{
    font-style: normal;
    font-weight: normal;
    font-size: 90%;
    line-height: 2%;
    color: #585859;
    text-align: justify;
}

.sectionTwo-img{
    width: 66px;
    height: 85px;
    padding: 2px;
}

.sectionTwo-box{
    width: 250px;
    height: 250px;
    background: #F8FFFB;
    box-shadow: -10px 20px 30px rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    margin: 2%;
    padding:2%;
}

.sectionTwo-box:hover{
    background: #FFFFFF;
    box-shadow: -20px 20px 30px rgba(0, 0, 0, 0.3);
    border: #2f2cf3 0.5px solid;
    border-radius: 10px;
    transform: scale(0.96);
    cursor: pointer;
}

/* Section Three Card Decks */

.sectionThree{
    margin-top: 80px;
}

.sectionThree-h2{
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 54px;
    color: #413960;
    margin-bottom: 20px;
}
.decks{
    padding: 24px 20px ;
    background: #FFFFFF;
    box-shadow: -10px 20px 30px rgba(0, 0, 0, 0.1);
    border-radius: 18px;
}

.decks:hover{
    background: #FFFFFF;
    box-shadow: -10px 20px 30px rgba(0, 0, 0, 0.1);
    border-radius: 18px;
    transform: scale(0.96);
    cursor: pointer;
}


h5{
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 36px;
    color: #413960;
}

.deck-p{
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;
    color: #585859;
}

.deck-img{
    width: 24px;
    height: 24px;
}

/* section four */


.man-img{
    width: 120px;
    padding-right: 30px;
    padding-top: 30px;
    padding-bottom: 30px;
}

.h22{
    font-family: Poppins;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 54px;
    color: #000000;
}

.sectionFour-p{
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 30px;
    color: #000000;
}

/* last section*/

.last-section{
    background: #282531;
    font-style: normal;
    font-size: 16px;
    color: #FFFFFF;
    margin-top: 50px;
    padding: 40px;
}

.last-section-h5{
    color: #FFFFFF;
}

footer{
    color: #CDCDCD;
}

